kubernetes/projects/applications/apps/wardn-ai/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wardn-ai-worker
  namespace: wardn
  labels:
    app.kubernetes.io/name: wardn-ai-worker
    app.kubernetes.io/component: worker
    app.kubernetes.io/part-of: wardn-ai
spec:
  revisionHistoryLimit: 2
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: wardn-ai-worker
      app.kubernetes.io/component: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        home-lab.io/config-revision: "wardn-ai-0f714fa"
      labels:
        app.kubernetes.io/name: wardn-ai-worker
        app.kubernetes.io/component: worker
        app.kubernetes.io/part-of: wardn-ai
        wardn-ai-psql-client: "true"
    spec:
      serviceAccountName: wardn-ai-api
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: harbor-registry
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: worker
          # renovate: datasource=git-refs depName=https://github.com/abhi1693/wardn-ai currentValue=master
          image: registry.home/ghcr.io/abhi1693/wardn-ai-worker:5d2efe3ced9a4413035c1c0de9228150ba9b8bbb
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: kubernetes-service-account
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wardn-ai-data-nfs
        - name: kubernetes-service-account
          projected:
            defaultMode: 0444
            sources:
              - serviceAccountToken:
                  path: token
                  expirationSeconds: 3600
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: ca.crt
              - downwardAPI:
                  items:
                    - path: namespace
                      fieldRef:
                        fieldPath: metadata.namespace
